<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ata"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_ata" />
        <item
            android:id="@+id/nav_apa"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_apa" />
        <item
            android:id="@+id/nav_ake"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ake" />
        <item
            android:id="@+id/nav_ana"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ana" />
    </group>
</menu>