<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ata">

    <fragment
        android:id="@+id/nav_ata"
        android:name="com.example.lesson_8.fragment.fragment1"
        android:label="@string/menu_ata"
        tools:layout="@layout/fragment_fragment1" />

    <fragment
        android:id="@+id/nav_apa"
        android:name="com.example.lesson_8.fragment.fragment2"
        android:label="@string/menu_apa"
        tools:layout="@layout/fragment_fragment2" />

    <fragment
        android:id="@+id/nav_ake"
        android:name="com.example.lesson_8.fragment.fragment3"
        android:label="@string/menu_ake"
        tools:layout="@layout/fragment_fragment3" />
    <fragment
        android:id="@+id/nav_ana"
        android:name="com.example.lesson_8.fragment.fragment4"
        android:label="@string/menu_ana"
        tools:layout="@layout/fragment_fragment4" />
</navigation>